added crispy form and changed some widgets

--- a/djago_crispy_forms_htmx/form_app/templates/form_app/index.html
+++ b/djago_crispy_forms_htmx/form_app/templates/form_app/index.html
@@ -1,6 +1,8 @@
 {% extends 'form_app/base.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 
-{{form.as_p}}
+{% crispy form  %}
+
 {% endblock %}
